feat: Dockerfile JVM 설정 수정
- JVM 설정을 Java 21 호환 GC 로깅으로 변경